# apalis

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  deny.toml
.cargo/: audit.toml
.github/workflows/: audit.yaml  cd.yaml  ci.yaml
apalis/: Cargo.toml  README.md
apalis-core/: Cargo.toml  README.md
apalis-core/src/: lib.rs
apalis-core/src/backend/: codec.rs  custom.rs  mod.rs  pipe.rs
apalis-core/src/backend/impls/: dequeue.rs  memory.rs  mod.rs
apalis-core/src/backend/poll_strategy/: mod.rs
apalis-core/src/monitor/: mod.rs
apalis-core/src/task/: builder.rs  extensions.rs  metadata.rs  status.rs  task_id.rs
apalis-core/src/task_fn/: guide.rs
apalis-core/src/worker/: builder.rs  context.rs  mod.rs  test_worker.rs
apalis-core/src/worker/ext/circuit_breaker/: service.rs
apalis-core/src/worker/ext/long_running/: future.rs  mod.rs  tracker.rs
apalis-sql/: Cargo.toml  README.md
apalis-sql/src/: context.rs  datetime.rs  ext.rs  from_row.rs  lib.rs
apalis-workflow/: Cargo.toml  README.md
apalis-workflow/src/: id_generator.rs  lib.rs  service.rs  sink.rs  step.rs
apalis-workflow/src/and_then/: mod.rs
apalis-workflow/src/composite/: mod.rs
apalis-workflow/src/dag/: context.rs  decode.rs  error.rs  executor.rs  mod.rs  node.rs  response.rs  service.rs
apalis-workflow/src/delay/: mod.rs
apalis-workflow/src/filter_map/: mod.rs
apalis-workflow/src/fold/: mod.rs
apalis-workflow/src/sequential/: mod.rs  service.rs  step.rs  workflow.rs
apalis-workflow/src/sequential/and_then/: mod.rs
apalis-workflow/src/sequential/delay/: mod.rs
apalis-workflow/src/sequential/filter_map/: mod.rs
apalis-workflow/src/sequential/fold/: mod.rs
apalis-workflow/src/sequential/repeat_until/: mod.rs
apalis/src/: lib.rs
apalis/src/layers/: mod.rs
apalis/src/layers/opentelemetry/: mod.rs
apalis/src/layers/tracing/: contextual_span.rs  mod.rs  otel_context.rs
apalis/tests/: otel_context_propagation.rs
examples/basics/: Cargo.toml
examples/basics/src/: main.rs
examples/catch-panic/: Cargo.toml
examples/dag-workflow/: Cargo.toml
examples/dag-workflow/src/: main.rs
examples/dynamic-workers/: Cargo.toml
examples/dynamic-workers/src/: enum_dispatch.rs  generics.rs  macros.rs
examples/email-service/: Cargo.toml
examples/fn-args/: Cargo.toml
examples/fn-args/src/: main.rs
examples/graceful-shutdown/: Cargo.toml
examples/graceful-shutdown/src/: main.rs
examples/long-running/: Cargo.toml
examples/long-running/src/: main.rs
examples/monitor/: Cargo.toml
examples/monitor/src/: main.rs
examples/opentelemetry/: Cargo.toml
examples/opentelemetry/src/: main.rs
examples/prometheus/: Cargo.toml
examples/prometheus/src/: main.rs
examples/retries/: Cargo.toml
examples/sentry/: Cargo.toml
examples/stepped-workflow/: Cargo.toml
examples/stepped-workflow/src/: main.rs
examples/tracing/: Cargo.toml
examples/tracing/src/: main.rs
examples/unmonitored-worker/: Cargo.toml
examples/workflow/: Cargo.toml
supply-chain/: config.toml
utils/apalis-codec/: Cargo.toml  README.md
utils/apalis-codec/src/: bincode.rs  json.rs  lib.rs  msgpack.rs
utils/apalis-file-storage/: Cargo.toml  README.md
utils/apalis-file-storage/src/: backend.rs  lib.rs  meta.rs  shared.rs  sink.rs  util.rs
