[package]
name = "apalis-sql"
version = "1.0.0-rc.3"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition.workspace = true
repository.workspace = true
readme = "README.md"
publish = true

license = "MIT"
description = "SQL utilities for background job processing with apalis"
keywords = ["job", "task", "scheduler", "worker", "sql"]
categories = ["database", "asynchronous"]

[dependencies]
apalis-core = { path = "../apalis-core", version = "1.0.0-rc.3", default-features = false, features = [
    "sleep",
    "serde",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"], optional = true }
time = { version = "0.3", features = ["serde"], optional = true }

[features]
default = ["chrono"]
chrono = ["dep:chrono"]
time = ["dep:time"]

[package.metadata.cargo-udeps.ignore]
# When both chrono and time features are enabled, time takes precedence
# so chrono appears unused. This is expected behavior for --all-features.
normal = ["chrono"]

[lints]
workspace = true
