[package]
name = "long-running"
version = "0.1.0"
license = "MIT"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
apalis = { path = "../../apalis", features = ["limit", "catch-panic", "tracing"] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3.20"
futures = "0.3"

[dependencies.tracing]
default-features = false
version = "0.1"
