[package]
name = "monitor"
version = "0.1.0"
license = "MIT"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
apalis = { path = "../../apalis" }
serde = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
email-service = { path = "../email-service" }
futures = "0.3"
apalis-file-storage = { path = "../../utils/apalis-file-storage" }


[dependencies.tracing]
default-features = false
version = "0.1"
