[package]
name = "opentelemetry-example"
version = "0.1.0"
edition = "2018"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
axum = { version = "0.8.8", features = [ "macros" ] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
apalis = { path = "../../apalis", features = ["opentelemetry"] }
apalis-file-storage = { path = "../../utils/apalis-file-storage" }
futures = "0.3"
email-service = { path = "../email-service" }
opentelemetry = { version = "0.31.0", default-features = false, features = ["metrics"] }
opentelemetry_sdk = { version = "0.31.0", features = ["metrics"], default-features = false }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["metrics", "http-proto"] }
opentelemetry-prometheus = { version = "0.31.0", default-features = false }
prometheus = { version = "0.14.0", default-features = false }
