[package]
name = "prometheus-example"
version = "0.1.0"
edition = "2018"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
apalis = { path = "../../apalis", features = ["prometheus"] }
apalis-core = { path = "../../apalis-core", features = ["serde"] }
futures = "0.3"
metrics-exporter-prometheus = "0.18.1"
email-service = { path = "../email-service" }
apalis-file-storage = { path = "../../utils/apalis-file-storage" }
