[package]
name = "apalis-codec"
version = "0.1.0-rc.1"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
description = "Codec utilities for using various serialization formats in apalis"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
homepage = "https://github.com/apalis-dev/apalis"
documentation = "https://docs.rs/apalis-codec"
readme = "README.md"
keywords = ["apalis", "codec", "job", "serde", "rust"]
categories = ["encoding", "parsing", "concurrency"]

[features]
default = ["json"]
## Enable serde_json support
json = ["apalis-core/serde", "dep:serde", "dep:serde_json"]
## Enable bincode support
bincode = ["dep:bincode", "dep:thiserror"]
## Enable MessagePack support
msgpack = ["dep:rmp-serde", "dep:serde", "apalis-core/serde", "dep:thiserror"]

[dependencies]
apalis-core = { path = "../../apalis-core", version = "1.0.0-rc.1", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
bincode = { version = "2.0.1", optional = true }
rmp-serde = { version = "1.3.1", optional = true }
thiserror = { version = "2.0.0", optional = true }

[lints]
workspace = true
